<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_box_bg"
    android:radius="20dp"
    tools:context=".dialogAlertSignout">

    <TextView
        android:id="@+id/logout_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/logout_dialog_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/logout_dialog_qn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout_dialog_title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/logout_from"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/parking_name_qn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout_dialog_qn"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/parking_name_qn"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parking_name_qn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="160dp"
            android:layout_height="52dp"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="160dp"
            android:layout_height="52dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/logout_btn"
            android:backgroundTint="@color/black"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </RelativeLayout>

</RelativeLayout>