<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_box_bg"
    android:radius="20dp"
    tools:context=".dialogAlertVehicle">

    <TextView
        android:id="@+id/parking_lot_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/parking_name"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/vehicle_no_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parking_lot_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/vehicle_no_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/vehicle_no"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/vehicle_no_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_toEndOf="@+id/vehicle_no_text"
            android:fontFamily="@font/montserrat"
            android:text="@string/xxxx"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/in_time_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vehicle_no_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/in_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/in_time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/in_time_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_toEndOf="@+id/in_time_text"
            android:fontFamily="@font/montserrat"
            android:text="@string/xxxx"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/out_time_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in_time_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/out_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/out_time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/out_time_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_toEndOf="@+id/out_time_text"
            android:fontFamily="@font/montserrat"
            android:text="@string/xxxx"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/cost_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/out_time_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/cost_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/cost"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cost_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_toEndOf="@+id/cost_text"
            android:fontFamily="@font/montserrat"
            android:text="@string/xxxx"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cost_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/check_out_btn"
            android:layout_width="160dp"
            android:layout_height="52dp"
            android:text="@string/check_out"

            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="160dp"
            android:layout_height="52dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/check_out_btn"
            android:backgroundTint="@color/black"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </RelativeLayout>


</RelativeLayout>