<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_bg"
    tools:context=".enterNumber">

    <ImageView
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/logout_icon" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@mipmap/ic_app_image" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/app_name"
            android:textSize="25dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/parking_lot_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/parking_name"
            android:textSize="25dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_vehicle_no"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parking_lot_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:hint="@string/add_vehicle_field"
            android:textColorHint="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/vehicle_plate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat"
                android:inputType="textCapCharacters"
                android:textColor="@color/white"
                android:maxLength="13"
                android:textColorHint="@color/black"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="320dp"
            android:layout_height="52dp"
            android:layout_below="@+id/add_vehicle_no"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/my_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>


</RelativeLayout>